--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header class="header-container">
       <div class="container">
         <nav class="navigation-container">
           <a class="header-logo" href="./index.html"
