edited hero/section 1 css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- header -->
     <header class="header-container">
-      <div class="container">
+      <div class="header-box">
         <nav class="navigation-container">
           <a class="header-logo" href="./index.html"
             >Web<span class="logo-header-text">Studio</span></a
@@ -60,32 +60,32 @@
         </div>
       </section>
       <!-- Advantages section-->
-      <section>
+      <section class="adv-section">
         <div class="container">
-          <h2></h2>
+          <h2 class="visually-hidden"></h2>
           <ul class="advantages-list">
-            <li>
+            <li class="adv-list-item">
               <h3 class="advantages-header-text">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="advantages-header-text">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="advantages-header-text">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="adv-list-item">
               <h3 class="advantages-header-text">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
