--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- header -->
     <header class="header-container">
-      <div class="header-box">
+      <div class="container">
         <nav class="navigation-container">
           <a class="header-logo" href="./index.html"
             >Web<span class="logo-header-text">Studio</span></a
