--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- Advantages section-->
       <section class="adv-section">
         <div class="container">
-          <h2 class="visually-hidden"></h2>
+          <h2 class="visually-hidden" aria-hidden="true"></h2>
           <ul class="advantages-list">
             <li class="adv-list-item">
               <h3 class="advantages-header-text">Strategy</h3>
