edited sec3 html/css

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
                 alt="Mark Guerrero smilig"
                 width="264"
               />
-              <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-member-position">Product Designer</p>
+              <div class="team-card-text-content">
+                <h3 class="team-member-name">Mark Guerrero</h3>
+                <p class="team-member-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -115,8 +117,10 @@
                 alt="Tom Ford smilig"
                 width="264"
               />
-              <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-member-position">Frontend Developer</p>
+              <div class="team-card-text-content">
+                <h3 class="team-member-name">Tom Ford</h3>
+                <p class="team-member-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -124,8 +128,10 @@
                 alt="Camila Garcia smilig"
                 width="264"
               />
-              <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-member-position">Marketing</p>
+              <div class="team-card-text-content">
+                <h3 class="team-member-name">Camila Garcia</h3>
+                <p class="team-member-position">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -133,8 +139,10 @@
                 alt="Daniel Wilson smilig"
                 width="264"
               />
-              <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-member-position">UI Designer</p>
+              <div class="team-card-text-content">
+                <h3 class="team-member-name">Daniel Wilson</h3>
+                <p class="team-member-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
