edited header and sections styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <li><a class="nav-links-list-content" href="">Contacts</a></li>
           </ul>
         </nav>
-
         <address class="address-style">
           <ul class="address-links-list">
             <li>
@@ -148,7 +147,7 @@
         </div>
       </section>
       <!-- Portfolio section-->
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="our-team">Our Portfolio</h2>
           <ul class="product-list">
