--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- header -->
     <header class="header-container">
-      <div class="container">
+      <div class="container-head">
         <nav class="navigation-container">
           <a class="header-logo" href="./index.html"
             >Web<span class="logo-header-text">Studio</span></a
@@ -151,59 +151,71 @@
         <div class="container">
           <h2 class="our-team">Our Portfolio</h2>
           <ul class="product-list">
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/banking-app.jpg"
                 alt="banking app interface"
                 width="360"
               />
-              <h3 class="product-name">Banking App</h3>
-              <p class="product-type">App</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Banking App</h3>
+                <p class="product-type">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/cashless-payments.jpg"
                 alt="cashless payment process"
                 width="360"
               />
-              <h3 class="product-name">Cashless Payment</h3>
-              <p class="product-type">Marketing</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Cashless Payment</h3>
+                <p class="product-type">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/meditation-app.jpg"
                 alt="name of app 'return to nornacity'"
                 width="360"
               />
-              <h3 class="product-name">Meditation App</h3>
-              <p class="product-type">App</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Meditation App</h3>
+                <p class="product-type">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/taxi-service.jpg"
                 alt="taxi car interior"
                 width="360"
               />
-              <h3 class="product-name">Taxi Service</h3>
-              <p class="product-type">Marketing</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Taxi Service</h3>
+                <p class="product-type">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/screen-illustrations.jpg"
                 alt="phone wallpapers design examples"
                 width="360"
               />
-              <h3 class="product-name">Screen Illustrations</h3>
-              <p class="product-type">Design</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Screen Illustrations</h3>
+                <p class="product-type">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/our-portfolio/online-courses.jpg"
                 alt="woman smiling durig education process"
                 width="360"
               />
-              <h3 class="product-name">Online Courses</h3>
-              <p class="product-type">Marketing</p>
+              <div class="product-text-box">
+                <h3 class="product-name">Online Courses</h3>
+                <p class="product-type">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -212,7 +224,7 @@
     <!--Footer-->
     <footer class="foot-style">
       <div class="container">
-        <a class="header-logo" href="./index.html"
+        <a class="footer-logo" href="./index.html"
           >Web<span class="logo-footer-text">Studio</span></a
         >
         <p class="foot-par-text">
