finalizing hw3 attempt2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- header -->
     <header class="header-container">
-      <div class="container-head">
+      <div class="container-head container">
         <nav class="navigation-container">
           <a class="header-logo" href="./index.html"
             >Web<span class="logo-header-text">Studio</span></a
